<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="udtDBChannel" Id="{01cf5b70-6565-4219-b4be-af626ab48655}">
    <Declaration><![CDATA[TYPE udtDBChannel :
STRUCT
	CurrentUser:DINT;
	ErrorCode: DINT;
	ErrorMessage: STRING[256];
	DataIn: ARRAY[0..1999] OF BYTE;
	DataOut: ARRAY[0..1999] OF BYTE;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>